# spacecleaner

./: .gitignore  Cargo.toml  LICENSE  README.md  README_USERS.md  SIMPLE_GUIDE.md  build-releases.sh  install.sh  quick-install.sh  spacecleaner-gui.sh  spacecleaner.rb
src/: main.rs  scanner.rs  ui.rs  utils.rs
src/cleaners/: caches.rs  docker.rs  mod.rs
