[package]
name = "spacecleaner"
version = "0.1.0"
edition = "2021"
description = "Fast storage cleanup tool for macOS and Linux"
authors = ["Andra Pradana Ardiansyah <andrapra.work@gmail.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
byte-unit = "5.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27"
console = "0.15"
walkdir = "2.4"
shellexpand = "3.1"

[[bin]]
name = "spacecleaner"
path = "src/main.rs"
